--- a/settings.gradle
+++ b/settings.gradle
@@ -20,6 +20,7 @@ include 'webserver:webcapsule'
 include 'experimental'
 include 'experimental:avalanche'
 include 'experimental:behave'
+include 'experimental:cordacpp'
 include 'experimental:quasar-hook'
 include 'experimental:corda-utils'
 include 'experimental:notary-raft'
