--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,7 @@ include 'client:jfx'
 include 'client:mock'
 include 'client:rpc'
 include 'djvm'
+include 'docker'
 include 'djvm:cli'
 include 'webserver'
 include 'webserver:webcapsule'
