--- a/docker/src/config/starting-node.conf
+++ b/docker/src/config/starting-node.conf
@@ -2,7 +2,7 @@ myLegalName=${MY_LEGAL_NAME}
 p2pAddress=${MY_PUBLIC_ADDRESS}":"${MY_P2P_PORT}
 rpcSettings {
     address="0.0.0.0:"${MY_RPC_PORT}
-    adminAddress="0.0.0.0:${MY_RPC_ADMIN_PORT}"
+    adminAddress="0.0.0.0:"${MY_RPC_ADMIN_PORT}
 }
 
 security {
@@ -11,7 +11,7 @@ security {
             type=INMEMORY
             users=[
                 {
-                    password=${RPC_PASSWORD}
+                    password="testUser1"
                     permissions=[
                         ALL
                     ]
