--- a/docker/src/config/starting-node.conf
+++ b/docker/src/config/starting-node.conf
@@ -21,13 +21,17 @@ security {
         }
     }
 }
-compatibilityZoneURL = ${COMPATIBILITY_ZONE}
+networkServices : {
+    doormanURL      =    ${DOORMAN_URL}
+    networkMapURL   =    ${COMPATIBILITY_ZONE}
+}
+
 detectPublicIp = false
 dataSourceProperties {
     dataSource {
         password=${DB_PASSWORD}
         url="jdbc:h2:file:/opt/corda/persistence;DB_CLOSE_ON_EXIT=FALSE;WRITE_DELAY=0;LOCK_TIMEOUT=10000"
-        user=sa
+        user="sa"
     }
     dataSourceClassName="org.h2.jdbcx.JdbcDataSource"
 }
