--- a/experimental/cordacpp/build.gradle
+++ b/experimental/cordacpp/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'com.cisco.external-build' version '1.10'
+}
+
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'net.corda.plugins.publish-utils'
@@ -19,6 +23,12 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
+task generateCppHeaders(type: JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = "net.corda.tools.serialization.GenerateCPPHeadersKt"
+    args = ['include', 'net.corda.core.transactions.SignedTransaction', 'net.corda.core.transactions.WireTransaction']
+}
+
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
@@ -36,14 +46,32 @@ jar {
         exclude "META-INF/*.DSA"
         exclude "META-INF/*.RSA"
     }
-    baseName = "gen-serialization-libs"
+    baseName = "corda-cpp"
     manifest {
         attributes(
-                'Main-Class': 'net.corda.tools.serialization.GenerateSerializationLibs'
+                'Main-Class': 'net.corda.tools.serialization.GenerateCPPHeadersKt'
         )
     }
 }
 
 publish {
-    name 'corda-tools-gen-serialization-libs'
+    name 'corda-cpp'
+}
+
+
+task cmake(type: Exec) {
+    commandLine 'cmake'
+    workingDir "${projectDir}"
+}
+
+task make(type: Exec) {
+    dependsOn generateCppHeaders
+    commandLine 'make'
+    workingDir "${projectDir}/cmake-build-debug"
+}
+
+task cordacpp(type: Exec) {
+    dependsOn make
+    workingDir "${projectDir}/cmake-build-debug"
+    commandLine "./CordaCPP"
 }
